@@ -596,7 +596,7 @@ CMDBuild.Management.TemplateResolver.prototype = {
 					} else {
 						f.changed = true;
 					}
-				}, this);
+				}, scope);
 
 				field.mon(field, "blur", function(f) {
 					if (f.changed) {
@@ -604,7 +604,7 @@ CMDBuild.Management.TemplateResolver.prototype = {
 
 						callback.call(scope);
 					}
-				}, this);
+				}, scope);
 			}
 		}
 	},
