@@ -21,9 +21,9 @@
 			'onWidgetCustomFormLayoutFormImportButtonClick',
 			'onWidgetCustomFormLayoutFormResetButtonClick',
 			'onWidgetCustomFormLayoutFormShow = onWidgetCustomFormShow',
-			'widgetCustomFormLayoutFormDataGet = widgetCustomFormLayoutControllerDataGet',
-			'widgetCustomFormLayoutFormDataSet = widgetCustomFormDataSet',
-			'widgetCustomFormLayoutFormIsValid = widgetCustomFormLayoutControllerIsValid'
+			'widgetCustomFormLayoutFormDataGet = widgetCustomFormLayoutDataGet',
+			'widgetCustomFormLayoutFormDataSet = widgetCustomFormLayoutDataSet',
+			'widgetCustomFormLayoutFormIsValid = widgetCustomFormLayoutIsValid'
 		],
 
 		/**
@@ -80,8 +80,8 @@
 							var xaVars = CMDBuild.Utils.Metadata.extractMetaByNS(attribute.meta, 'system.template.');
 							xaVars['_SystemFieldFilter'] = attribute.filter;
 
-							var templateResolver = new CMDBuild.Management.TemplateResolver({ // TODO: implementation of serverside template resolver
-								clientForm: this.cmfg('widgetCustomFormControllerPropertyGet', 'getClientForm'),
+							var templateResolver = new CMDBuild.Management.TemplateResolver({
+								clientForm: this.cmfg('widgetCustomFormControllerPropertyGet', 'clientForm'),
 								xaVars: xaVars,
 								serverVars: this.cmfg('widgetCustomFormGetTemplateResolverServerVars')
 							});
