@@ -1,6 +1,6 @@
 {
 	"description": "Português Portugal",
-	"release": "1.0 - 2.3.1",
+	"release": "2.4-dev",
 	"administration": {
 		"description": "Módulo de Administração",
 		"modClass": {
