@@ -24,6 +24,16 @@ FIXES
 
  * Login page errors
 
+ * LDAP connection timeout freezes UI for long time
+
+ * Widget CustomForm: reset to default behaviour error with functions
+
+ * Reference fields errors with domain's attributes
+
+ * Lookup fields no mandatory label flag in display panels
+
+ * Widget CustomForm: server persistence manage errors
+
 
 
 
